logo alignment fixes

--- a/ndohyep/static/css/smart.css
+++ b/ndohyep/static/css/smart.css
@@ -1,6 +1,7 @@
 /* Header */
 .header {height:75px;}
 .header .logo {float:left; width:150px; padding:20px 20px 0;}
+.header .masthead {padding: 10px 0 0 20px; max-width: 80%;}
 
 
 
